Added Google drive functions.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,11 @@ scikit-learn
 neo4j
 graphdatascience
 oauth2client
-gspread 
+gspread
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
 google-cloud-bigquery
 google-cloud-storage
 google-cloud-aiplatform
@@ -18,3 +22,4 @@ gcsfs
 gsheets
 pypdf2
 git+https://github.com/pdfminer/pdfminer.six.git@761410e66ce08f8407674a574069210a8d9d09dd
+
