Added mail.py and exchange server.

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,7 @@ openai
 gcsfs
 gsheets
 pypdf2
+imaplib
+exchangelib
 git+https://github.com/pdfminer/pdfminer.six.git@761410e66ce08f8407674a574069210a8d9d09dd
 
