Updated cfg file.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = kgml-utils
+name = pytils
 version = 0.01
 author = "Pierre de Lacaze"
-description = "KGML utility functions"
+description = "Pytils utility functions"
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://https://github.com/adeo/Opus-Knowledge-Graph-Python-Utils
+url = https://https://github.com/delaray/pytils.git@develop
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
