Updated web with basic scraping functions.

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,6 @@ gcsfs
 gsheets
 pypdf2
 exchangelib
+selenium
 git+https://github.com/pdfminer/pdfminer.six.git@761410e66ce08f8407674a574069210a8d9d09dd
 
