Switched to pypdf library.

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ matplotlib
 openai
 gcsfs
 gsheets
-pypdf2
+pypdf
 exchangelib
 selenium
 git+https://github.com/pdfminer/pdfminer.six.git@761410e66ce08f8407674a574069210a8d9d09dd
