--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ gcsfs
 gsheets
 pypdf
 PyPDF2
+pdfreader
 exchangelib
 selenium
 git+https://github.com/pdfminer/pdfminer.six.git@761410e66ce08f8407674a574069210a8d9d09dd
