WIP: Fixed issue with locating Abstract.

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ gsheets
 pypdf
 PyPDF2
 pdfreader
+Unidecode
 exchangelib
 selenium
 git+https://github.com/pdfminer/pdfminer.six.git@761410e66ce08f8407674a574069210a8d9d09dd
