--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,5 @@ pdfreader
 Unidecode
 exchangelib
 selenium
+mypy
 git+https://github.com/pdfminer/pdfminer.six.git@761410e66ce08f8407674a574069210a8d9d09dd
