Removed nltk dependency from web.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,4 +27,8 @@ Unidecode
 exchangelib
 selenium
 mypy
+rope
+jedi
+autopep8
+pre-commit
 git+https://github.com/pdfminer/pdfminer.six.git@761410e66ce08f8407674a574069210a8d9d09dd
